{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 114,
  "lineage": "ec9a3d82-5917-df12-e4c6-13d6802c34f7",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a274eae681888a94",
            "association_id": "eipassoc-01b6f3aa192661533",
            "domain": "vpc",
            "id": "eipalloc-0a274eae681888a94",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-00674983789a83bc2",
            "private_dns": "ip-172-16-2-160.ap-south-1.compute.internal",
            "private_ip": "172.16.2.160",
            "public_dns": "ec2-43-204-8-130.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.8.130",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0165d5313a12fed5f",
            "association_id": "eipassoc-067557c57ba95eecf",
            "domain": "vpc",
            "id": "eipalloc-0165d5313a12fed5f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f0d953aac2f237a3",
            "private_dns": "ip-172-16-3-115.ap-south-1.compute.internal",
            "private_ip": "172.16.3.115",
            "public_dns": "ec2-13-232-144-89.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.144.89",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:179191371435:internet-gateway/igw-05a8daa736be921c0",
            "id": "igw-05a8daa736be921c0",
            "owner_id": "179191371435",
            "tags": {
              "Name": "IGW: For test_terraform"
            },
            "tags_all": {
              "Name": "IGW: For test_terraform"
            },
            "vpc_id": "vpc-04a0ce61cc3becef8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a274eae681888a94",
            "association_id": "eipassoc-00efefa4d33853874",
            "connectivity_type": "public",
            "id": "nat-0e476198402ebc3bf",
            "network_interface_id": "eni-096b2d0f474895fee",
            "private_ip": "172.16.2.227",
            "public_ip": "43.204.8.130",
            "subnet_id": "subnet-08a3b1b6d1737eb53",
            "tags": {
              "Name": "Private NAT GW: For test_terraform Project"
            },
            "tags_all": {
              "Name": "Private NAT GW: For test_terraform Project"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.aws_practice_private_subnets",
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0165d5313a12fed5f",
            "association_id": "eipassoc-0884b042028a093c2",
            "connectivity_type": "public",
            "id": "nat-047d057fbd6258985",
            "network_interface_id": "eni-0da443be2232e8405",
            "private_ip": "172.16.3.196",
            "public_ip": "13.232.144.89",
            "subnet_id": "subnet-08c50aff5b74b6dab",
            "tags": {
              "Name": "Private NAT GW: For test_terraform Project"
            },
            "tags_all": {
              "Name": "Private NAT GW: For test_terraform Project"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.aws_practice_private_subnets",
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_private_route_table",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:179191371435:route-table/rtb-02ab92904c4648b12",
            "id": "rtb-02ab92904c4648b12",
            "owner_id": "179191371435",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e476198402ebc3bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private: For test terraform Project "
            },
            "tags_all": {
              "Name": "RT Private: For test terraform Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-04a0ce61cc3becef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.aws_practice_private_subnets",
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:179191371435:route-table/rtb-0e4c7dc67771e7f9b",
            "id": "rtb-0e4c7dc67771e7f9b",
            "owner_id": "179191371435",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047d057fbd6258985",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private: For test terraform Project "
            },
            "tags_all": {
              "Name": "RT Private: For test terraform Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-04a0ce61cc3becef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.aws_practice_private_subnets",
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_public_route_table",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:179191371435:route-table/rtb-0ae708a6d1ad8558e",
            "id": "rtb-0ae708a6d1ad8558e",
            "owner_id": "179191371435",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a8daa736be921c0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Public: For test terraform Project "
            },
            "tags_all": {
              "Name": "RT Public: For test terraform Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-04a0ce61cc3becef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.public_internet_gateway",
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0a355ae61f3f1a3",
            "route_table_id": "rtb-02ab92904c4648b12",
            "subnet_id": "subnet-08a3b1b6d1737eb53"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.test_private_route_table",
            "module.vpc.aws_subnet.aws_practice_private_subnets",
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047c18518e2f23ff3",
            "route_table_id": "rtb-0e4c7dc67771e7f9b",
            "subnet_id": "subnet-08c50aff5b74b6dab"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.test_private_route_table",
            "module.vpc.aws_subnet.aws_practice_private_subnets",
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d90fbf77cfb679d",
            "route_table_id": "rtb-0ae708a6d1ad8558e",
            "subnet_id": "subnet-0e91f532f00b8753c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.public_internet_gateway",
            "module.vpc.aws_route_table.test_public_route_table",
            "module.vpc.aws_subnet.aws_practice_public_subnets",
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068b010185e7597a9",
            "route_table_id": "rtb-0ae708a6d1ad8558e",
            "subnet_id": "subnet-0a51f0502fe97b2d0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.public_internet_gateway",
            "module.vpc.aws_route_table.test_public_route_table",
            "module.vpc.aws_subnet.aws_practice_public_subnets",
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_practice_private_subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:179191371435:subnet/subnet-08a3b1b6d1737eb53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a3b1b6d1737eb53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179191371435",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "vpc_id": "vpc-04a0ce61cc3becef8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:179191371435:subnet/subnet-08c50aff5b74b6dab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c50aff5b74b6dab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179191371435",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "vpc_id": "vpc-04a0ce61cc3becef8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_practice_public_subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:179191371435:subnet/subnet-0e91f532f00b8753c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e91f532f00b8753c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179191371435",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 1 "
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 1 "
            },
            "vpc_id": "vpc-04a0ce61cc3becef8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:179191371435:subnet/subnet-0a51f0502fe97b2d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a51f0502fe97b2d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179191371435",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 2 "
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 2 "
            },
            "vpc_id": "vpc-04a0ce61cc3becef8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-test-practice"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-test-practice",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:179191371435:vpc/vpc-04a0ce61cc3becef8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/22",
            "default_network_acl_id": "acl-0f74ca7f7c158f065",
            "default_route_table_id": "rtb-0c7c22b03a4d097fb",
            "default_security_group_id": "sg-06f99f792ede47c9d",
            "dhcp_options_id": "dopt-0b56a4089eeb0dbc7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a0ce61cc3becef8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7c22b03a4d097fb",
            "owner_id": "179191371435",
            "tags": {
              "Name": "VPC: vpc-test-practice"
            },
            "tags_all": {
              "Name": "VPC: vpc-test-practice"
            }
          }
        }
      ]
    }
  ]
}